Update def pts_vecindad
He armado la funcion pts_vecindad y la he documentado para saber que hace.

Sin embargo aun tiene un posible error que quiero evitar y es que las distancias se calculen consigo mismas

Por: Luis Andrés González de la Rosa

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "02a37a1e-ef35-4c4d-83e3-315bafc13d53",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
     "            Arreglo tipo numpy con tipo de dato np.float64\n",
     "            Dimensiones   ->    (renglones,columnas)\n",
     "                                (        M,       1)\n",
-    "                                M es la canatidad de indices qu ela funcion encuentre\n",
+    "                                M es la canatidad de indices que la funcion encuentre\n",
     "                                dentro de la vecindad\n",
     "    nota: Se espera que una futura implementación permita tambien reducir la cantidad de calculos\n",
     "          tomando encuenta que un pt1 ya se encuentra en la vecindad de otro pt2, por lo que pt2\n",
@@ -234,7 +234,27 @@
     "          \n",
     "    \"\"\"\n",
     "    arr_u = np.array(arr,copy=True)\n",
+    "    N = len(arr_u)\n",
     "    \n",
+    "    indices_arr = np.zeros((N,1),np.float64)\n",
+    "    \n",
+    "    #Cuenta cuantos pts caen dentro de la vecindad\n",
+    "    cont_in_h = 0\n",
+    "    \n",
+    "    \n",
+    "    for i in range(0,N):\n",
+    "        \n",
+    "        #Observamos que no haya dos puntos iguales mas de dos veces, por que si hay dos puntos iguales\n",
+    "        #mas de dos veces tenemos un error en nuestro filtrado de puntos en el poligono\n",
+    "        \n",
+    "        \n",
+    "        #Observamos si la distancia entre los puntos pt_c, y arr_u[i] es menor que\n",
+    "        #el radio de la vecindad\n",
+    "        if (h > Point(pt_c[0],pt_c[1]).distance(Point(arr_u[i,0],arr_u[i,1]))):\n",
+    "            #Si es menor entonces guardamos el indice y aumentamos el contador\n",
+    "            indices_arr[i,0] = i\n",
+    "            cont_in_h +=1\n",
+    "        \n",
     "    return indices_arr"
    ]
   },
@@ -707,6 +727,16 @@
     "        \n",
     "plt.show()   \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e531ceb8-1808-430b-9593-1716c82c0323",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " Point(pt_c[0],pt_c[1]).distance(Point(arr_u[i,0],arr_u[i,1])"
    ]
   }
  ],
