Update_pts_vec_return
Se ha actualizado el valor de regreso de la función para evitar que se regresen arreglos demasiado grandes cuando es innecesario.
Y se ha actualizado la forma de guardar los indices, por que se estaban guardando en el elemento igual a la cantidad de veces que se habia corrido el for en lugar de en el siguiente elemento del arreglo

Por:LAGR

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "ee3b23f4-6028-4f0b-99a7-7bfb007781d9",
    "metadata": {
     "tags": []
@@ -261,6 +261,7 @@
     "            cont_in_h +=1\n",
     "        elif distance==0.0:\n",
     "            print(\"Cuidao\")\n",
+    "            print(\"i\",i)\n",
     "            \n",
     "    #Regresamos un indice con esos datos\n",
     "    return indices_arr"
@@ -739,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "e531ceb8-1808-430b-9593-1716c82c0323",
    "metadata": {},
    "outputs": [
@@ -747,7 +748,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cuidao\n"
+      "Cuidao\n",
+      "i 4\n"
      ]
     },
     {
@@ -755,14 +757,14 @@
       "text/plain": [
        "array([[0.],\n",
        "       [1.],\n",
-       "       [0.],\n",
+       "       [2.],\n",
        "       ...,\n",
        "       [0.],\n",
        "       [0.],\n",
        "       [0.]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +773,7 @@
     "h = 2\n",
     "pts_vecindad(\n",
     "    pts_g[0]['pt_f_c'][:,:],\n",
-    "    pts_g[0]['pt_f_c'][2,:],\n",
+    "    pts_g[0]['pt_f_c'][4,:],\n",
     "    h)\n",
     "\n"
    ]
