Update_normal_metodo_optimizacion
Se ha escrito el código y una documentación prototipo para ver que tal funciona esta funcion

Por: LAGR

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "id": "ee3b23f4-6028-4f0b-99a7-7bfb007781d9",
    "metadata": {
     "tags": []
@@ -290,10 +290,52 @@
     "                                (        1,       2)\n",
     "        f:\n",
     "            String\n",
-    "            Opciones permitidas: \"Gaussian\",\"s\"\n",
+    "            Opciones permitidas: \"Gaussian\",\"Inverse\",\"Polynomal\",\"Identity\",\"Laplacian\",\"Cousine\"\n",
+    "            \n",
+    "    Dato de salida:\n",
+    "        Normal:\n",
+    "            Dimensiones   ->    (renglones,columnas)\n",
+    "                                (        1,       4)\n",
+    "            Se busca que este dato sea el vector normal al punto ya normalizado (x1,y1,x2,y2)\n",
+    "            donde x1,y1 representen donde inicia y x2y2 donde termina\n",
     "    \"\"\"\n",
+    "    #Como podriamos modificar los valores, no queremos que haya problemas\n",
+    "    arr_u = np.array(arr, copy=True)\n",
+    "    pt_c_u =  np.array(pt_c, copy=True)\n",
     "    \n",
-    "    return 0"
+    "    #Aquí guardaremos la suma de todas las matrices generadas\n",
+    "    sum_M =np.zeros((2,2),np.float64)\n",
+    "    \n",
+    "    #Aqui guardaremos la magnitud al cuadrado de la diferencia entre los vectores\n",
+    "    magnitude2 = 0\n",
+    "    \n",
+    "    #Aqui guardaremos el vector diferencia transpuesto\n",
+    "    dif_ij = np.zeros((1,2),np.float64)\n",
+    "    \n",
+    "    #La ecuacion que generara cada una de las matrices es\n",
+    "    #    ----\n",
+    "    #    \\   (r_j - r_i)(r_j - r_i)^T\n",
+    "    # C = -    ---------------------    w_(i,j)\n",
+    "    #    /       ||r_j - r_i||^2\n",
+    "    #    ----\n",
+    "    #      j\n",
+    "    # Donde las r_j representa a todos los puntos circundantes\n",
+    "    # y la sumatoria va rondando en ellos, no se calcula a si mismo\n",
+    "    \n",
+    "    #Por como guardamos los puntos la transpuesta es la normal y viceversa\n",
+    "    #pero se sigue el mismo procedimiento descrito arriba\n",
+    "    for j in range(0,len(arr_u)):\n",
+    "        if (arr_u[j,0]==pt_c_u[0]) and (arr_u[j,1]==pt_c_u[1]):\n",
+    "            continue\n",
+    "        \n",
+    "        dif_ij = arr_u[j,:] - pt_c_u\n",
+    "        magnitude2 = ((dif_ij[0,0])**2+(dif_ij[0,1])**2)\n",
+    "        sum_M +=  (np.transpose(dif_ij)*dif_ij)/(magnitude2)\n",
+    "    \n",
+    "    Eigen = np.linalg.eig(sum_M)\n",
+    "    print(Eigen)\n",
+    "    #Ahora solucionamos M\n",
+    "    return "
    ]
   },
   {
@@ -878,6 +920,59 @@
     "for i in range(0,len(indices_arr)):\n",
     "    plt.scatter(pts_g[0]['pt_f_c'][int(indices_arr[i]),0],pts_g[0]['pt_f_c'][int(indices_arr[i]),1],color='red')\n",
     "plt.scatter(pts_g[0]['pt_f_c'][1000,0],pts_g[0]['pt_f_c'][1000,1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "c403dd9d-5fde-4d7c-8325-1ee2a930d652",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 2.],\n",
+       "       [2., 4.]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Prueba de multiplicacion de vectores y vectores transpuestos\n",
+    "#RC\n",
+    "n_vec = np.zeros((2,1))\n",
+    "n_vec[0] = 1\n",
+    "n_vec[1] = 2\n",
+    "\n",
+    "n_vec*np.transpose(n_vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "8baa3aa2-2929-45ef-95ac-f4560bfec175",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1,   2, 100])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([1,2,3])\n",
+    "a = x[2:]\n",
+    "\n",
+    "a[0] =100\n",
+    "x"
    ]
   }
  ],
