--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 77,
    "id": "02a37a1e-ef35-4c4d-83e3-315bafc13d53",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "from random import uniform\n",
     "import numpy as np\n",
-    "\n"
+    "import scipy\n"
    ]
   },
   {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "id": "ee3b23f4-6028-4f0b-99a7-7bfb007781d9",
    "metadata": {
     "tags": []
@@ -335,6 +335,7 @@
     "    Eigen = np.linalg.eig(sum_M)\n",
     "    print(Eigen)\n",
     "    #Ahora solucionamos M\n",
+    "    Eigen = scipy.linalg.eig(sum_M)\n",
     "    return "
    ]
   },
@@ -952,27 +953,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
+   "id": "1ca659bb-8d4b-45f3-b89b-ba680fd52ba0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eigenvector_optimizado(A):\n",
+    "    \"\"\"\n",
+    "    A: \n",
+    "    La matriz a la que se le quiern sacar los\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "id": "8baa3aa2-2929-45ef-95ac-f4560bfec175",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([  1,   2, 100])"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.40824829046386324, 0.8164965809277259, 0.40824829046386285)\n",
+      "(0.7071067811865476, -0.7071067811865474, 0.0)\n",
+      "(0.40824829046386335, -0.8164965809277259, 0.4082482904638631)\n",
+      "[1.63299316+0.j 3.26598632+0.j 1.63299316+0.j]\n",
+      "1.6329931618554516 3.2659863237109046 1.632993161855452\n"
+     ]
     }
    ],
    "source": [
-    "x = np.array([1,2,3])\n",
-    "a = x[2:]\n",
+    "#Matrix 3x3\n",
+    "A = np.array([[0,1,2],\n",
+    "              [3,2,1],\n",
+    "              [1,1,1]])\n",
     "\n",
-    "a[0] =100\n",
-    "x"
+    "#Eigenvalores \n",
+    "R_v = scipy.linalg.eigvals(A)\n",
+    "\n",
+    "#Eigenvectores\n",
+    "R = np.linalg.eig(A)\n",
+    "\n",
+    "#Eigenvectores\n",
+    "eig_1 = R[1][0][0],R[1][1][0],R[1][2][0]\n",
+    "#print(eig_1)\n",
+    "eig_2 = R[1][0][1],R[1][1][1],R[1][2][1]\n",
+    "#print(eig_2)\n",
+    "eig_3 = R[1][0][2],R[1][1][2],R[1][2][2]\n",
+    "#print(eig_3)\n",
+    "\n",
+    "#De esta manera convirmamos que sean eigenvectore\n",
+    "#e eigenvalores\n",
+    "\n",
+    "# eig_val*eig_Vec\n",
+    "print(R_v[0]*np.array(eig_1))\n",
+    "\n",
+    "#matrix*eig_Vec\n",
+    "x=0\n",
+    "y=0\n",
+    "z=0\n",
+    "for i in range(0,3):\n",
+    "    x += A[0][i]*eig_1[i]\n",
+    "    y += A[1][i]*eig_1[i]\n",
+    "    z += A[2][i]*eig_1[i]\n",
+    "print(x,y,z)"
    ]
   }
  ],
