Update_funcionalidad_normal_optimization
Buscamos dividir la funcion normal_metodo_optimizacion en tres, una que sería esta en la que se mandan a llamar las otras dos funciones que son las siguientes:
       - C_matrix_normal donde calcularemos la suma de matrices
       -C_eigen_normal donde calcularemos los eigenvalores e eigenvectores y obtendremos el eigenvalor minimo y su eigenvector correspondiente que debe ser el normal

Crearemos un tercer caso por si es más util en un futuro:
     -C_eigen_ponderado donde aparte de obtener los eigenvalores e eigenvectores, veremos que estos no esten apuntando dentro de la figura, si lo estan modificamos su direccion por un factor -1.  Despues tomamos ambos eigenvectores y según su eigenvalor ponderamos un vector promedio ponderado y ese será el vector normal al punto

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -961,8 +961,16 @@
     "def eigenvector_optimizado(A):\n",
     "    \"\"\"\n",
     "    A: \n",
+    "        Dimensiones: \n",
+    "        \n",
     "    La matriz a la que se le quiern sacar los\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    \n",
+    "    \n",
+    "    #Llevamos acabo la funcion para encotrar los\n",
+    "    #eigenvalores u eigenvectores\n",
+    "    \n",
+    "    return"
    ]
   },
   {
