Update_C_matrix_normal
El objetivo de este commit es decir que estamos actualizando la documentación y procesos que lleva acabo esta función C_matrix_normal

Nota: Todavía no incluimos la función de peso

Por: LAGR

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "id": "02a37a1e-ef35-4c4d-83e3-315bafc13d53",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "id": "ee3b23f4-6028-4f0b-99a7-7bfb007781d9",
    "metadata": {
     "tags": []
@@ -272,6 +272,89 @@
     "    return indices_arr[:cont_in_h]\n",
     "\n",
     "\n",
+    "\n",
+    "def C_matrix_normal(sum_M,arr_u,pt_c_u,dif_ij):\n",
+    "    \"\"\"\n",
+    "    Objetivo: Llevar acabo la suma de matrices dada por la ecuacion\n",
+    "    #La ecuacion que generara cada una de las matrices es\n",
+    "    #    ----\n",
+    "    #    \\   (r_j - r_i)(r_j - r_i)^T\n",
+    "    # C = -    ---------------------    w_(i,j)\n",
+    "    #    /       ||r_j - r_i||^2\n",
+    "    #    ----\n",
+    "    #      j\n",
+    "    # Donde las r_j representa a todos los puntos circundantes\n",
+    "    # y la sumatoria va rondando en ellos, no se calcula a si mismo\n",
+    "    \n",
+    "    y regresar solo la suma de todas las matrices generadas\n",
+    "    \n",
+    "        Datos de entrada:\n",
+    "        sum_M:\n",
+    "            Arreglo tipo numpy\n",
+    "            Dimensiones   ->    (renglones,columnas)\n",
+    "                                (        2,       2)\n",
+    "            Objetivo      ->    donde se guardara la suma de matrices               \n",
+    "        \n",
+    "        arr_u:\n",
+    "            Arreglo tipo numpy\n",
+    "            Dimensiones   ->    (renglones,columnas)\n",
+    "                                (        N,       2)\n",
+    "                                N es un numero entero deseado\n",
+    "            objetivo      ->    donde se guardaran los puntos circundantes\n",
+    "                                al punto central, así que estos deben ser filtrados \n",
+    "                                con anterioridad a la función\n",
+    "        pt_c:\n",
+    "            Arreglo tipo numpy o lista, preferiblemente un arreglo\n",
+    "            Dimensiones   ->    (renglones,columnas)\n",
+    "                                (        1,       2)\n",
+    "        f:\n",
+    "            String\n",
+    "            Opciones permitidas: \"Gaussian\",\"Inverse\",\"Polynomal\",\"Identity\",\"Laplacian\",\"Cousine\"\n",
+    "            \n",
+    "    Dato de salida:\n",
+    "        Normal:\n",
+    "            Dimensiones   ->    (renglones,columnas)\n",
+    "                                (        1,       4)\n",
+    "            Se busca que este dato sea el vector normal al punto ya normalizado (x1,y1,x2,y2)\n",
+    "            donde x1,y1 representen donde inicia y x2y2 donde termina\n",
+    "    \"\"\"\n",
+    "    #Por como guardamos los puntos la transpuesta es la normal y viceversa\n",
+    "    #pero se sigue el mismo procedimiento descrito arriba\n",
+    "    for j in range(0,len(arr_u)):\n",
+    "        \n",
+    "        #La siguiente condicion se asegura de que no se saque la diferencia\n",
+    "        #de vectores, siendo ambos vectores los mismos\n",
+    "        if (arr_u[j,0]==pt_c_u[0]) and (arr_u[j,1]==pt_c_u[1]):\n",
+    "            continue\n",
+    "        \n",
+    "        \n",
+    "        #Se saca la diferencia entre vectores posicion\n",
+    "        dif_ij = arr_u[j,:] - pt_c_u\n",
+    "        \n",
+    "        magnitude2 = ((dif_ij[0,0])**2+(dif_ij[0,1])**2)\n",
+    "        \n",
+    "        sum_M +=  (np.transpose(dif_ij)*dif_ij)/(magnitude2)\n",
+    "        \n",
+    "    return sum_M\n",
+    "\n",
+    "def C_eigen_ponderado():\n",
+    "    \"\"\"\n",
+    "    C_eigen_normal donde calcularemos los eigenvalores e eigenvectores \n",
+    "    y obtendremos el eigenvalor minimo y su eigenvector correspondiente \n",
+    "    que debe ser el normal\n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "\n",
+    "def C_eigen_normal():\n",
+    "    \"\"\"\n",
+    "    C_eigen_ponderado donde aparte de obtener los eigenvalores e eigenvectores, \n",
+    "    veremos que estos no esten apuntando dentro de la figura, si lo estan\n",
+    "    modificamos su direccion por un factor -1.  Despues tomamos ambos eigenvectores \n",
+    "    y según su eigenvalor ponderamos un vector promedio ponderado \n",
+    "    y ese será el vector normal al punto\n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "\n",
     "def normal_metodo_optimizacion(pts_nhd,pt_c,f):\n",
     "    \"\"\"\n",
     "    Objetivo: Se busca poder calcular la normal de los puntos de un poligono\n",
@@ -310,6 +393,10 @@
     "    magnitude2 = 0\n",
     "    \n",
     "    #Aqui guardaremos el vector diferencia transpuesto\n",
+    "    \n",
+    "    #Lo del vector transpuesto no funciona como deberia aveces, así que hay\n",
+    "    #que asegurarse o hacer una funcion especifica aparte, para generar la matrix\n",
+    "    # de 2x2\n",
     "    dif_ij = np.zeros((1,2),np.float64)\n",
     "    \n",
     "    #La ecuacion que generara cada una de las matrices es\n",
@@ -322,16 +409,9 @@
     "    # Donde las r_j representa a todos los puntos circundantes\n",
     "    # y la sumatoria va rondando en ellos, no se calcula a si mismo\n",
     "    \n",
-    "    #Por como guardamos los puntos la transpuesta es la normal y viceversa\n",
-    "    #pero se sigue el mismo procedimiento descrito arriba\n",
-    "    for j in range(0,len(arr_u)):\n",
-    "        if (arr_u[j,0]==pt_c_u[0]) and (arr_u[j,1]==pt_c_u[1]):\n",
-    "            continue\n",
-    "        \n",
-    "        dif_ij = arr_u[j,:] - pt_c_u\n",
-    "        magnitude2 = ((dif_ij[0,0])**2+(dif_ij[0,1])**2)\n",
-    "        sum_M +=  (np.transpose(dif_ij)*dif_ij)/(magnitude2)\n",
+    "    sum_M = C_matrix_normal(sum_M,arr_u,pt_c_u,dif_ij)\n",
     "    \n",
+    "\n",
     "    Eigen = np.linalg.eig(sum_M)\n",
     "    print(Eigen)\n",
     "    #Ahora solucionamos M\n",
