Update_doc_C_eigen_normal
Se busco documentar el funcionamiento general que tendrá la función, además de explicar como debían de ser ingresados sus valores de entrada y salida de datos, con la finalidad de poder escribir en un futuro el código de la función.

Por: LAGR

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ee3b23f4-6028-4f0b-99a7-7bfb007781d9",
    "metadata": {
     "tags": []
@@ -273,7 +273,7 @@
     "\n",
     "\n",
     "\n",
-    "def C_matrix_normal(sum_M,arr_u,pt_c_u,dif_ij):\n",
+    "def C_matrix_normal(sum_M,arr_u,pt_c_u,f,delta=1):\n",
     "    \"\"\"\n",
     "    Objetivo: Llevar acabo la suma de matrices dada por la ecuacion\n",
     "    #La ecuacion que generara cada una de las matrices es\n",
@@ -300,24 +300,43 @@
     "            Dimensiones   ->    (renglones,columnas)\n",
     "                                (        N,       2)\n",
     "                                N es un numero entero deseado\n",
-    "            objetivo      ->    donde se guardaran los puntos circundantes\n",
+    "            objetivo      ->    donde se guardaran los puntos (x,y) circundantes\n",
     "                                al punto central, así que estos deben ser filtrados \n",
-    "                                con anterioridad a la función\n",
-    "        pt_c:\n",
+    "                                con anterioridad a la función.\n",
+    "                                Un punto (x,y) por cada renglon\n",
+    "        pt_c_u:\n",
     "            Arreglo tipo numpy o lista, preferiblemente un arreglo\n",
     "            Dimensiones   ->    (renglones,columnas)\n",
     "                                (        1,       2)\n",
+    "            objetivo      ->    donde se guardaran las coordenadas (x,y)\n",
+    "                                del punto central en el que se estan llevando acabo\n",
+    "                                las operaciones para encontrar su normal\n",
     "        f:\n",
     "            String\n",
     "            Opciones permitidas: \"Gaussian\",\"Inverse\",\"Polynomal\",\"Identity\",\"Laplacian\",\"Cousine\"\n",
-    "            \n",
+    "            objetivo      ->    Decir que función de peso se usará para\n",
+    "                                calcular cada una de las matrices que se sumara\n",
+    "                                \n",
     "    Dato de salida:\n",
-    "        Normal:\n",
+    "        sum_M:\n",
     "            Dimensiones   ->    (renglones,columnas)\n",
-    "                                (        1,       4)\n",
-    "            Se busca que este dato sea el vector normal al punto ya normalizado (x1,y1,x2,y2)\n",
-    "            donde x1,y1 representen donde inicia y x2y2 donde termina\n",
+    "                                (        2,       2)\n",
+    "            objetivo      ->    Ser ya la suma de todas las matrices que calculamos\n",
     "    \"\"\"\n",
+    "    #Lo del vector transpuesto no funciona como deberia aveces, así que hay\n",
+    "    #que asegurarse o hacer una funcion especifica aparte, para generar la matrix\n",
+    "    # de 2x2\n",
+    "    dif_ij = np.zeros((1,2),np.float64)\n",
+    "    \n",
+    "    \n",
+    "    #Eleccion de funcion de peso\n",
+    "#--------------------------------------------------------------------------------------------------------------\n",
+    "    #Nota_ CALCULAR LA DELTA \n",
+    "#--------------------------------------------------------------------------------------------------------------\n",
+    "    if f == \"Gaussian\":\n",
+    "        f = \"(1/(delta*(2*np.pi)**0.5))*np.exp(-magnitude2/(2*delta**2))\"\n",
+    "    \n",
+    "    \n",
     "    #Por como guardamos los puntos la transpuesta es la normal y viceversa\n",
     "    #pero se sigue el mismo procedimiento descrito arriba\n",
     "    for j in range(0,len(arr_u)):\n",
@@ -330,9 +349,10 @@
     "        \n",
     "        #Se saca la diferencia entre vectores posicion\n",
     "        dif_ij = arr_u[j,:] - pt_c_u\n",
-    "        \n",
+    "        #Se saca la magnitud de la diferencia entre los vec_posicion\n",
     "        magnitude2 = ((dif_ij[0,0])**2+(dif_ij[0,1])**2)\n",
     "        \n",
+    "        #Se suma a la matriz resultante la nueva matriz\n",
     "        sum_M +=  (np.transpose(dif_ij)*dif_ij)/(magnitude2)\n",
     "        \n",
     "    return sum_M\n",
@@ -345,14 +365,49 @@
     "    \"\"\"\n",
     "    pass\n",
     "\n",
-    "def C_eigen_normal():\n",
+    "def C_eigen_normal(sum_M,pt_c_u,Figura):\n",
     "    \"\"\"\n",
+    "    Objetivo_General:\n",
+    "    \n",
     "    C_eigen_ponderado donde aparte de obtener los eigenvalores e eigenvectores, \n",
     "    veremos que estos no esten apuntando dentro de la figura, si lo estan\n",
     "    modificamos su direccion por un factor -1.  Despues tomamos ambos eigenvectores \n",
     "    y según su eigenvalor ponderamos un vector promedio ponderado \n",
     "    y ese será el vector normal al punto\n",
-    "    \"\"\"\n",
+    "    \n",
+    "    Datos de entrada:\n",
+    "        sum_M:\n",
+    "            Arreglo tipo numpy \n",
+    "            Dimensiones   ->    (renglones,columnas)\n",
+    "                                (        2,       2)\n",
+    "            Objetivo      ->    Que se le de una matriz 2x2\n",
+    "                                con diferentes valores\n",
+    "        pt_c_u:\n",
+    "            Arreglo tipo numpy o lista, preferiblemente un arreglo\n",
+    "            Dimensiones   ->    (renglones,columnas)\n",
+    "                                (        1,       2) \n",
+    "            Objetivo      ->    Tener como referencia a que punto correspondera\n",
+    "                                el eigevector con el eigenvector minimo\n",
+    "        Figura:\n",
+    "            Classe tipo Polygon\n",
+    "            Objetivo      ->    Saber si los eigenvectores apuntan para \n",
+    "                                afuera o para adentro\n",
+    "    Datos de salida:\n",
+    "        normal_vec_:\n",
+    "            Dimensiones    ->    (renglones,columnas)\n",
+    "                                 (       1,        2)\n",
+    "            Objetivo       ->    Saber la direccion a la que apunta \n",
+    "                                 la normal obtenida\n",
+    "                                 \n",
+    "        pt_c_u:\n",
+    "            Solo saber a que punto pertenece y así tener más control de la funcion\n",
+    "            que estamos aplicando, en un futuro puede ser eliminado, todo depende de la\n",
+    "            implementacion de otras funciones\n",
+    "     \"\"\"\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    return None\n",
     "    pass\n",
     "\n",
     "def normal_metodo_optimizacion(pts_nhd,pt_c,f):\n",
