--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "02a37a1e-ef35-4c4d-83e3-315bafc13d53",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "ee3b23f4-6028-4f0b-99a7-7bfb007781d9",
    "metadata": {
     "tags": []
@@ -405,10 +405,37 @@
     "            implementacion de otras funciones\n",
     "     \"\"\"\n",
     "    \n",
+    "    #Con la matriz 2x2 recibida solo tenemos que  encontrar sus eigenvalores e eigenfunciones\n",
+    "    Eigen_data = np.linalg.eig(sum_M)\n",
     "    \n",
+    "    #Esta solo encuentra los eigenvalores para comprobar\n",
+    "    R_v = scipy.linalg.eigvals(sum_M)\n",
+    "    \n",
+    "    #Renombramos el arreglo para hacer un mejor manejo de los datos\n",
+    "    R = Eigen_data\n",
+    "    #Ahora sacamos los eigenvectores a la forma en que nosotros estamos\n",
+    "    #guardando un vector desde el principio\n",
+    "    #Eigenvectores\n",
+    "    eigvec_1 = R[1][0][0],R[1][1][0],R[1][2][0]\n",
+    "    eigvec_2 = R[1][0][1],R[1][1][1],R[1][2][1]\n",
+    "    \n",
+    "    eig_vecs = (eigvec_1,eigvec_2)\n",
+    "    #Con el siguiente código se comprueba que eigenvalor esta\n",
+    "    #asocidado a cada eigenvector con la ecuacion de eigenvalores y eigenvectores\n",
+    "    # An = Bn\n",
+    "    \n",
+    "    #En las siguientes variables se guardara la multiplicacion\n",
+    "    #de la matrix con el eigenvector correspondiente\n",
+    "    x=0\n",
+    "    y=0\n",
+    "    z=0\n",
+    "    for i in range(0,2):\n",
+    "        x += sum_M[0][i]*eig_1[i]\n",
+    "        y += sum_M[1][i]*eig_1[i]\n",
+    "        z += sum_M[2][i]*eig_1[i]\n",
     "    \n",
     "    return None\n",
-    "    pass\n",
+    "    \n",
     "\n",
     "def normal_metodo_optimizacion(pts_nhd,pt_c,f):\n",
     "    \"\"\"\n",
@@ -1110,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 15,
    "id": "8baa3aa2-2929-45ef-95ac-f4560bfec175",
    "metadata": {},
    "outputs": [
@@ -1118,12 +1145,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.40824829046386324, 0.8164965809277259, 0.40824829046386285)\n",
-      "(0.7071067811865476, -0.7071067811865474, 0.0)\n",
-      "(0.40824829046386335, -0.8164965809277259, 0.4082482904638631)\n",
       "[1.63299316+0.j 3.26598632+0.j 1.63299316+0.j]\n",
+      "[1.63299316 3.26598632 1.63299316]\n",
       "1.6329931618554516 3.2659863237109046 1.632993161855452\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1151,7 +1186,8 @@
     "\n",
     "# eig_val*eig_Vec\n",
     "print(R_v[0]*np.array(eig_1))\n",
-    "\n",
+    "izq_ecuacion = (R_v[0]*np.array(eig_1)).real.trunc\n",
+    "print(izq_ecuacion)\n",
     "#matrix*eig_Vec\n",
     "x=0\n",
     "y=0\n",
@@ -1160,7 +1196,9 @@
     "    x += A[0][i]*eig_1[i]\n",
     "    y += A[1][i]*eig_1[i]\n",
     "    z += A[2][i]*eig_1[i]\n",
-    "print(x,y,z)"
+    "print(x,y,z)\n",
+    "der_ecuacion = [x,y,z]\n",
+    "der_ecuacion == izq_ecuacion"
    ]
   }
  ],
