Update_C_eigen_normal
Se ha estado desarrollando y documentando el funcionamiento de la
función para ya retornar el eigenvector, pero en el proceso me he dado cuenta que necesitamos una función que modifique a donde crece el eigenvector
si este apunta hacia adentro de la figura.  Así que he empezado a pensar en como usar esta función para tambien usarla en
 el código general, ya que usamos
 esa en varias partes.

Por: LAGR

--- a/Meshfree_AdvancingFront.ipynb
+++ b/Meshfree_AdvancingFront.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "02a37a1e-ef35-4c4d-83e3-315bafc13d53",
    "metadata": {},
    "outputs": [],
@@ -416,13 +416,17 @@
     "    #Ahora sacamos los eigenvectores a la forma en que nosotros estamos\n",
     "    #guardando un vector desde el principio\n",
     "    #Eigenvectores\n",
+    "    \n",
+    "    #Queremos reconocer que indice de eigenvalor corresponde\n",
+    "    #a q indice de eigenvector y como solo ex una matriz de 2x2\n",
+    "    #si un eigenvalor no corresponde a eig_vec 1 corresponde al dos\n",
+    "    #así de simple\n",
     "    eigvec_1 = R[1][0][0],R[1][1][0],R[1][2][0]\n",
     "    eigvec_2 = R[1][0][1],R[1][1][1],R[1][2][1]\n",
     "    \n",
-    "    eig_vecs = (eigvec_1,eigvec_2)\n",
     "    #Con el siguiente código se comprueba que eigenvalor esta\n",
     "    #asocidado a cada eigenvector con la ecuacion de eigenvalores y eigenvectores\n",
-    "    # An = Bn\n",
+    "    # R_v[0]*n = sum_M*n ----------------------------------------------------------------------------------[ec1]\n",
     "    \n",
     "    #En las siguientes variables se guardara la multiplicacion\n",
     "    #de la matrix con el eigenvector correspondiente\n",
@@ -434,6 +438,18 @@
     "        y += sum_M[1][i]*eig_1[i]\n",
     "        z += sum_M[2][i]*eig_1[i]\n",
     "    \n",
+    "    #Ahora elegimos el eigenvalor más pequeño que es el que queremos\n",
+    "    #encontrar y según cual sea regresaremos el eigenvector correspondiente\n",
+    "    # y el punto \n",
+    "    if R_v[0]>R_v[1]:\n",
+    "        \n",
+    "        #Creamos la derecha e izquierada de la ec1\n",
+    "        izq_ecuacion = np.around((R_v[1]*np.array(eig_1)).real,5)\n",
+    "        der_ecuacion = np.round(np.array([x,y,z]),5)\n",
+    "        \n",
+    "        #Si son iguales regresamos ese eigenvector\n",
+    "        if (der_ecuacion == izq_ecuacion).all() == True:\n",
+    "            return \n",
     "    return None\n",
     "    \n",
     "\n",
@@ -1137,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "8baa3aa2-2929-45ef-95ac-f4560bfec175",
    "metadata": {},
    "outputs": [
@@ -1146,17 +1162,17 @@
      "output_type": "stream",
      "text": [
       "[1.63299316+0.j 3.26598632+0.j 1.63299316+0.j]\n",
-      "[1.63299316 3.26598632 1.63299316]\n",
+      "[1.63299 3.26599 1.63299]\n",
       "1.6329931618554516 3.2659863237109046 1.632993161855452\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([False, False, False])"
+       "array([ True,  True,  True])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1202,7 @@
     "\n",
     "# eig_val*eig_Vec\n",
     "print(R_v[0]*np.array(eig_1))\n",
-    "izq_ecuacion = (R_v[0]*np.array(eig_1)).real.trunc\n",
+    "izq_ecuacion = np.round((R_v[0]*np.array(eig_1)).real,5)\n",
     "print(izq_ecuacion)\n",
     "#matrix*eig_Vec\n",
     "x=0\n",
@@ -1197,8 +1213,27 @@
     "    y += A[1][i]*eig_1[i]\n",
     "    z += A[2][i]*eig_1[i]\n",
     "print(x,y,z)\n",
-    "der_ecuacion = [x,y,z]\n",
+    "der_ecuacion = np.round(np.array([x,y,z]),5)\n",
     "der_ecuacion == izq_ecuacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c4be2211-4a54-45e7-a7a9-9285d042cac3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Todos iguales\n"
+     ]
+    }
+   ],
+   "source": [
+    "if (der_ecuacion == izq_ecuacion).all() == True:\n",
+    "    print(\"Todos iguales\")"
    ]
   }
  ],
